# agentic-kb-platform

./: .env  README.md  check_local_db.ps1  copy_data.ps1  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  start_backend.ps1  test_search.ps1
backend/: Dockerfile  config.py  ingest_all.py  ingest_file.py  main.py  requirements.txt  test_api_call.py  test_api_endpoint.py  test_asyncpg_direct.py  test_faiss_endpoint.py  test_faiss_search.py  test_final_api.py  test_optimized_api.py  test_sqlalchemy_connect_args.py
backend/aagentic/nodes/: tool.py  (+6 more)
backend/api/: test.py
backend/db/: async_pool.py  async_query.py  conncet.py  conncetion.py  models.py  query.py  quries.py
backend/faiss_index/: index.pkl
backend/ingestion/: api.py  check.ipynb  chunker.py  db_writer.py  embedder.py  ingest_file.py  utils.py
backend/memory/: memory.py
backend/models/: AgentState.py  __init__.py  base.py  chunk.py  file.py
backend/registry/: file_registry.py
backend/router/: faiss_search.py  get_files_router.py  getting_summary.py  ingestion_router.py  search_router.py
backend/tests/: Dockerfile.test  requirements.txt  test_conncet_import.py  test_connection.py  test_health.py  test_nodes.py  test_url_encoding.py
backend/uploads/: summary.txt
backend/utils/: embedding_utils.py
backend/vectorstore/: index.py
database/: readme.md
database/sql/: agent_memory.sql  check_data.sql  check_extension.sql  cleanup.sql  readme.md  schema.sql  seed.sql  teardown.sql
semantic-ui/: Dockerfile  package-lock.json  package.json
semantic-ui/src/: App.tsx
(+6 files in other folders)
