[project]
name = "agentic-kb-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "fitz>=0.0.1.dev2",
    "psycopg2>=2.9.11",
    "pymupdf>=1.26.5",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
